docs/evidence/burst-deploy/2026-10-03/reachability-hub-to-prod.json
{
    "NetworkInsightsAnalyses": [
        {
            "NetworkInsightsAnalysisId": "nia-0d4519316a8e54c7d",
            "NetworkInsightsAnalysisArn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:network-insights-analysis/nia-0d4519316a8e54c7d",
            "NetworkInsightsPathId": "nip-03d769f3ada894d58",
            "StartDate": "2026-10-03T12:32:45.903000+00:00",
            "Status": "succeeded",
            "WarningMessage": "The analysis succeeded but it was unable to analyze all components. Reason: The request was missing the following optional permissions: [software.amazon.awssdk.services.networkfirewall.model.NetworkFirewallException, software.amazon.awssdk.services.directconnect.model.DirectConnectException, software.amazon.awssdk.services.ec2.model.Ec2Exception]",
            "NetworkPathFound": true,
            "ForwardPathComponents": [
                {
                    "SequenceNumber": 1,
                    "AttachedTo": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    },
                    "Component": {
                        "Id": "tgw-attach-0c68e669ca05f9af6",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-attachment/tgw-attach-0c68e669ca05f9af6",
                        "Name": "atlas-network-attach-hub"
                    },
                    "OutboundHeader": {
                        "DestinationAddresses": [
                            "10.102.11.66/32"
                        ],
                        "DestinationPortRanges": [
                            {
                                "From": 0,
                                "To": 65535
                            }
                        ],
                        "Protocol": "6",
                        "SourceAddresses": [
                            "10.100.0.0/16"
                        ],
                        "SourcePortRanges": [
                            {
                                "From": 0,
                                "To": 65535
                            }
                        ]
                    },
                    "TransitGateway": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    }
                },
                {
                    "SequenceNumber": 2,
                    "Component": {
                        "Id": "tgw-rtb-01647c4d8229304aa",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-route-table/tgw-rtb-01647c4d8229304aa",
                        "Name": "atlas-network-rtb-hub"
                    },
                    "TransitGateway": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    },
                    "TransitGatewayRouteTableRoute": {
                        "DestinationCidr": "10.102.0.0/16",
                        "State": "active",
                        "RouteOrigin": "propagated",
                        "AttachmentId": "tgw-attach-00ae2602e60041ad2",
                        "ResourceId": "vpc-0ca687af6548a3b1a",
                        "ResourceType": "vpc"
                    }
                },
                {
                    "SequenceNumber": 3,
                    "AttachedTo": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    },
                    "Component": {
                        "Id": "tgw-attach-00ae2602e60041ad2",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-attachment/tgw-attach-00ae2602e60041ad2",
                        "Name": "atlas-network-attach-prod"
                    },
                    "TransitGateway": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    }
                },
                {
                    "SequenceNumber": 4,
                    "AttachedTo": {
                        "Id": "tgw-attach-00ae2602e60041ad2",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-attachment/tgw-attach-00ae2602e60041ad2",
                        "Name": "atlas-network-attach-prod"
                    },
                    "Component": {
                        "Id": "eni-0c806f00d71812fe2",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:network-interface/eni-0c806f00d71812fe2"
                    },
                    "Subnet": {
                        "Id": "subnet-091d0529179c5f7c7",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:subnet/subnet-091d0529179c5f7c7",
                        "Name": "atlas-network-spoke-prod-private-1"
                    },
                    "Vpc": {
                        "Id": "vpc-0ca687af6548a3b1a",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:vpc/vpc-0ca687af6548a3b1a",
                        "Name": "atlas-network-spoke-prod-vpc"
                    }
                },
                {
                    "SequenceNumber": 5,
                    "AttachedTo": {
                        "Id": "tgw-attach-00ae2602e60041ad2",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-attachment/tgw-attach-00ae2602e60041ad2",
                        "Name": "atlas-network-attach-prod"
                    },
                    "Component": {
                        "Id": "eni-0c806f00d71812fe2",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:network-interface/eni-0c806f00d71812fe2"
                    },
                    "Subnet": {
                        "Id": "subnet-091d0529179c5f7c7",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:subnet/subnet-091d0529179c5f7c7",
                        "Name": "atlas-network-spoke-prod-private-1"
                    },
                    "Vpc": {
                        "Id": "vpc-0ca687af6548a3b1a",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:vpc/vpc-0ca687af6548a3b1a",
                        "Name": "atlas-network-spoke-prod-vpc"
                    }
                },
                {
                    "SequenceNumber": 6,
                    "AttachedTo": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    },
                    "Component": {
                        "Id": "tgw-attach-00ae2602e60041ad2",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-attachment/tgw-attach-00ae2602e60041ad2",
                        "Name": "atlas-network-attach-prod"
                    },
                    "InboundHeader": {
                        "DestinationAddresses": [
                            "10.102.11.66/32"
                        ],
                        "DestinationPortRanges": [
                            {
                                "From": 0,
                                "To": 65535
                            }
                        ],
                        "Protocol": "6",
                        "SourceAddresses": [
                            "10.100.0.0/16"
                        ],
                        "SourcePortRanges": [
                            {
                                "From": 0,
                                "To": 65535
                            }
                        ]
                    },
                    "TransitGateway": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    }
                }
            ],
            "ReturnPathComponents": [
                {
                    "SequenceNumber": 1,
                    "AttachedTo": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    },
                    "Component": {
                        "Id": "tgw-attach-00ae2602e60041ad2",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-attachment/tgw-attach-00ae2602e60041ad2",
                        "Name": "atlas-network-attach-prod"
                    },
                    "OutboundHeader": {
                        "DestinationAddresses": [
                            "10.100.0.0/16"
                        ],
                        "DestinationPortRanges": [
                            {
                                "From": 0,
                                "To": 65535
                            }
                        ],
                        "Protocol": "6",
                        "SourceAddresses": [
                            "10.102.11.66/32"
                        ],
                        "SourcePortRanges": [
                            {
                                "From": 0,
                                "To": 65535
                            }
                        ]
                    },
                    "TransitGateway": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    }
                },
                {
                    "SequenceNumber": 2,
                    "AttachedTo": {
                        "Id": "tgw-attach-00ae2602e60041ad2",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-attachment/tgw-attach-00ae2602e60041ad2",
                        "Name": "atlas-network-attach-prod"
                    },
                    "Component": {
                        "Id": "eni-03c6ea89d9dd2fe70",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:network-interface/eni-03c6ea89d9dd2fe70"
                    },
                    "Subnet": {
                        "Id": "subnet-0822470bab12d3228",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:subnet/subnet-0822470bab12d3228",
                        "Name": "atlas-network-spoke-prod-private-0"
                    },
                    "Vpc": {
                        "Id": "vpc-0ca687af6548a3b1a",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:vpc/vpc-0ca687af6548a3b1a",
                        "Name": "atlas-network-spoke-prod-vpc"
                    }
                },
                {
                    "SequenceNumber": 3,
                    "AclRule": {
                        "Cidr": "0.0.0.0/0",
                        "Egress": true,
                        "Protocol": "all",
                        "RuleAction": "allow",
                        "RuleNumber": 100
                    },
                    "Component": {
                        "Id": "acl-08e33c8cdf1969000",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:network-acl/acl-08e33c8cdf1969000"
                    }
                },
                {
                    "SequenceNumber": 4,
                    "Component": {
                        "Id": "rtb-0075b923183f04645",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:route-table/rtb-0075b923183f04645",
                        "Name": "atlas-network-spoke-prod-private-rt-0"
                    },
                    "RouteTableRoute": {
                        "DestinationCidr": "10.100.0.0/16",
                        "Origin": "createroute",
                        "TransitGatewayId": "tgw-0a72d09c183152eb4",
                        "State": "active"
                    }
                },
                {
                    "SequenceNumber": 5,
                    "AclRule": {
                        "Cidr": "0.0.0.0/0",
                        "Egress": false,
                        "Protocol": "all",
                        "RuleAction": "allow",
                        "RuleNumber": 100
                    },
                    "Component": {
                        "Id": "acl-08e33c8cdf1969000",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:network-acl/acl-08e33c8cdf1969000"
                    }
                },
                {
                    "SequenceNumber": 6,
                    "AttachedTo": {
                        "Id": "tgw-attach-00ae2602e60041ad2",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-attachment/tgw-attach-00ae2602e60041ad2",
                        "Name": "atlas-network-attach-prod"
                    },
                    "Component": {
                        "Id": "eni-03c6ea89d9dd2fe70",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:network-interface/eni-03c6ea89d9dd2fe70"
                    },
                    "Subnet": {
                        "Id": "subnet-0822470bab12d3228",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:subnet/subnet-0822470bab12d3228",
                        "Name": "atlas-network-spoke-prod-private-0"
                    },
                    "Vpc": {
                        "Id": "vpc-0ca687af6548a3b1a",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:vpc/vpc-0ca687af6548a3b1a",
                        "Name": "atlas-network-spoke-prod-vpc"
                    }
                },
                {
                    "SequenceNumber": 7,
                    "AttachedTo": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    },
                    "Component": {
                        "Id": "tgw-attach-00ae2602e60041ad2",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-attachment/tgw-attach-00ae2602e60041ad2",
                        "Name": "atlas-network-attach-prod"
                    },
                    "TransitGateway": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    }
                },
                {
                    "SequenceNumber": 8,
                    "Component": {
                        "Id": "tgw-rtb-01d795cb1863a8efd",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-route-table/tgw-rtb-01d795cb1863a8efd",
                        "Name": "atlas-network-rtb-prod"
                    },
                    "TransitGateway": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    },
                    "TransitGatewayRouteTableRoute": {
                        "DestinationCidr": "10.100.0.0/16",
                        "State": "active",
                        "RouteOrigin": "propagated",
                        "AttachmentId": "tgw-attach-0c68e669ca05f9af6",
                        "ResourceId": "vpc-03708c8ceccd5f6e4",
                        "ResourceType": "vpc"
                    }
                },
                {
                    "SequenceNumber": 9,
                    "AttachedTo": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    },
                    "Component": {
                        "Id": "tgw-attach-0c68e669ca05f9af6",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway-attachment/tgw-attach-0c68e669ca05f9af6",
                        "Name": "atlas-network-attach-hub"
                    },
                    "InboundHeader": {
                        "DestinationAddresses": [
                            "10.100.0.0/16"
                        ],
                        "DestinationPortRanges": [
                            {
                                "From": 0,
                                "To": 65535
                            }
                        ],
                        "Protocol": "6",
                        "SourceAddresses": [
                            "10.102.11.66/32"
                        ],
                        "SourcePortRanges": [
                            {
                                "From": 0,
                                "To": 65535
                            }
                        ]
                    },
                    "TransitGateway": {
                        "Id": "tgw-0a72d09c183152eb4",
                        "Arn": "arn:aws:ec2:us-east-1:<ACCOUNT_ID>:transit-gateway/tgw-0a72d09c183152eb4",
                        "Name": "atlas-network-tgw"
                    }
                }
            ],
            "Tags": []
        }
    ]
}
